--- a/bayi/src/app/pages/kayitlar/kullaniciKayitlari/kullaniciKayitlari.html
+++ b/bayi/src/app/pages/kayitlar/kullaniciKayitlari/kullaniciKayitlari.html
@@ -38,7 +38,7 @@
   
   <div class="separator-breadcrumb border-top mb-3"></div>
   
-  <div class="card shadow-primary mb-3">
+  <div class="card shadow-dark mb-3">
     <div class="card-body">
       <form class="row m-0" (submit)="kullaniciTanimlariListele()">
         <div class="form-group col-md-8">
