--- a/bayi/src/app/pages/islemler/satisEkle/satisEkle.html
+++ b/bayi/src/app/pages/islemler/satisEkle/satisEkle.html
@@ -1,8 +1,8 @@
 <div class="separator-breadcrumb border-top mb-3"></div>
 
-<div class="container-fluid">    
+<div class="container-fluid">
     <form class="row m-0" validControl [formGroup]="satisEklemeFormu" (submit)="satisEkle(); islemiKaydet()">
-        <div class="col-7" style="height: 850px; overflow-x: hidden; overflow-y: auto; border-radius: 5px;">
+        <div class="col-7" style="overflow-x: hidden; border-radius: 5px;">
             <div class="card-header bg-transparent border-1-bottom mx-3" style="border-radius: 10px; display: flex; justify-content: center; text-align: center;">
                 <span class="fas fa-solid fa-tags mr-1 mt-2 fs-16" style="color: #cdab60;"><a style="color: black; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> ÜRÜNLER</a></span>
             </div>
@@ -56,32 +56,32 @@
                 </a>
                 </div>
             </div>
-            <div class="row m-0" *ngIf="!urunListesi && !urunLoader">
-                <div class="alert alert-primary col-12 mt-2 p-4">
-                    <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
-                    <span class=" valign-middle">Listelemek istediğiniz ürün bulunamadı.</span>
+            <div class="container" style="overflow-y: auto; height: calc(100vh - 263px) !important;">
+                <div class="row m-0" *ngIf="!urunListesi && !urunLoader">
+                    <div class="alert alert-primary col-12 mt-2 p-4">
+                        <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
+                        <span class=" valign-middle">Listelemek istediğiniz ürün bulunamadı.</span>
+                    </div>
                 </div>
-            </div>
-            <div class="row m-0" *ngIf="urunLoader">
-                <div class="alert alert-primary col-12 mt-2 p-4">
-                    <div class="spinner-glow spinner-glow-primary m-0 mr-4 valign-middle"></div>
-                    <span class=" valign-middle">Ürün kayıtları listeleniyor, lütfen bekleyiniz.</span>
+                <div class="row m-0" *ngIf="urunLoader">
+                    <div class="alert alert-primary col-12 mt-2 p-4">
+                        <div class="spinner-glow spinner-glow-primary m-0 mr-4 valign-middle"></div>
+                        <span class=" valign-middle">Ürün kayıtları listeleniyor, lütfen bekleyiniz.</span>
+                    </div>
                 </div>
-            </div>
-            <div class="row m-0" *ngIf="urunListesi && !urunLoader">
-                <div class="col-6 mt-2 mb-1" *ngFor="let urun of urunListesi" (click)="sepeteEkle(urun)">
-                    <div class="card">
-                        <div class="card-body" style="text-align: right; box-shadow: 3px 3px 3px gray">
-                            <div class="row m-0">
-                                <div class="col-2">
-                                    <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="80px" width="80px" style="float: left;">
-                                </div>
-                                <div class="col-10">
-                                    <div>
-                                        <strong>{{urun.e_stok_kart_adi}}</strong>
+                <div class="row m-0" *ngIf="urunListesi && !urunLoader">
+                    <div class="col-6 mt-2 mb-1" *ngFor="let urun of urunListesi" (click)="sepeteEkle(urun)">
+                        <div class="card">
+                            <div class="card-body" style="text-align: right; box-shadow: 3px 3px 3px gray">
+                                <div class="row m-0">
+                                    <div class="col-2">
+                                        <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="80px" width="80px" style="float: left;">
                                     </div>
-                                    <div class="container mt-3" style="text-align: right;">
+                                    <div class="col-10">
                                         <div>
+                                            <strong>{{urun.e_stok_kart_adi}}</strong>
+                                        </div>
+                                        <div class="container mt-3" style="text-align: right;">
                                             <strong>{{urun.e_fiyat | currency : ' '}} ₺</strong>
                                         </div>
                                     </div>
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-5" style="max-height: 850px; overflow-x: hidden;">
+        <div class="col-5" style="height: calc( 100vh - 102px); overflow-x: hidden;">
             <div class="card">
                 <div class="card-header bg-transparent border-1-bottom mx-4" style="border-radius: 10px; width: 96%; display: flex; justify-content: center; text-align: center;">
                     <div class="row m-0">
@@ -101,13 +101,9 @@
                 </div>
                 <div class="card-body bg-transparent" style="height: calc(100vh - 365px) !important; overflow-y: auto;">
                     <div class="row m-0" *ngIf="!satisDetayListesi && !detayLoader">
-                        <div class="card col-12 mt-2">
-                            <div class="card-body">
-                                <div class="alert alert-primary col-12 m-3 p-4" style="text-align: center; font-size: large;">
-                                    <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
-                                    <span class="valign-middle">Sepetiniz Boş</span>
-                                </div>
-                            </div>
+                        <div class="alert alert-primary col-12 m-3 p-4" style="text-align: center; font-size: large;">
+                            <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
+                            <span class="valign-middle">Sepetiniz Boş</span>
                         </div>
                     </div>
                     <div class="row m-0" *ngIf="detayLoader">
@@ -233,7 +229,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </form>
