satis duzenleme kismindaki buglar cozuldu

--- a/bayi/src/app/pages/islemler/satisEkle/satisEkle.html
+++ b/bayi/src/app/pages/islemler/satisEkle/satisEkle.html
@@ -172,14 +172,14 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-3">
+                        <div class="col-4">
                             <a style="cursor: pointer;" class="card mb-4"
                                 [class]="{'shadow-warning': 1 == 1 }"
                                 (click)="sayfayiTemizle()">
                                 <div class="card-body">
                                     <div class="d-flex">
                                         <div class="w-100">
-                                        <b class="text-truncate fs-14 mb-2">Yenile</b>
+                                        <b class="text-truncate fs-14 mb-2">Yeni Sayfa</b>
                                         </div>
                                         <div class="text-warning ms-auto">
                                         <i class="fas fa-sync"></i>
@@ -188,14 +188,14 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-3">
+                        <div class="col-4">
                             <a style="cursor: pointer;" class="card mb-4"
                                 [class]="{'shadow-dark': 1 == 1}"
                                 (click)="sepetiTemizle()">
                                 <div class="card-body">
                                     <div class="d-flex">
                                         <div class="w-100">
-                                        <b class="text-truncate fs-14 mb-2">Temizle</b>
+                                        <b class="text-truncate fs-14 mb-2">Sepeti Temizle</b>
                                         </div>
                                         <div class="text-dark ms-auto">
                                         <i class="fas fa-solid fa-trash"></i>
@@ -204,7 +204,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-6">
+                        <div class="col-4">
                             <a style="cursor: pointer;" class="card shadow-outline-success mb-4"
                                 [class]="{'shadow-success': 1 == 1}"
                                 (click)="satisEkle(); islemiKaydet()">
