siparis duzenle ekrani duzenlendi

--- a/bayi/src/app/pages/islemler/siparisIslemleri/siparisIslemleri.html
+++ b/bayi/src/app/pages/islemler/siparisIslemleri/siparisIslemleri.html
@@ -98,7 +98,17 @@
           </div>
           <div class="col-md-6 form-group">
             <label>Miktar *</label>
-            <input type="number" class="form-control" formControlName="e_miktar" title="Miktar" required>
+            <!-- <input type="number" class="form-control" formControlName="e_miktar" title="Miktar" required> -->
+            <div class="row m-0">
+              <div class="col-12">
+                <div class="input-group">
+                  <span class="input-group-btn" *ngIf="siparisDetayEklemeFormu.value.e_miktar == 1"><button disabled type="button" class="btn btn-primary" ><span class="fas fa-solid fa-minus"></span></button></span>
+                  <span class="input-group-btn" *ngIf="siparisDetayEklemeFormu.value.e_miktar > 1"><button type="button" class="btn btn-primary" (click)="detayMiktarDuzenle('-')"><span class="fas fa-solid fa-minus"></span></button></span>
+                  <input id="miktarInput" type="number" class="form-control text-center" formControlName="e_miktar" title="Miktar" readonly required>
+                  <span class="input-group-btn"><button type="button" class="btn btn-primary" (click)="detayMiktarDuzenle('+')"><span class="fas fa-solid fa-plus"></span></button></span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <button id="submitButton2" class="hidden">Kaydet</button>
@@ -124,7 +134,7 @@
     </button>
   </div>
   <div class="modal-body">
-    <div class="card shadow-primary mb-3">
+    <div class="card shadow-dark mb-3">
       <div class="card-body">
         <form class="row m-0" (submit)="urunListele()">
           <div class="form-group col-md-8">
@@ -169,12 +179,12 @@
             </thead>
             <tbody>
               <tr *ngFor="let urun of urunListesi">
-                <td class="text-left">-</td>
+                <td class="text-left">
+                  <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="80px" width="80px">
+                </td>
                 <td class="text-left">{{urun.e_stok_kart_kodu}}</td>
                 <td class="text-left">{{urun.e_stok_kart_adi}}</td>
-                <td class="text-right" *ngIf="siparisListesi[0].e_fiyat_politikasi == '1'">{{urun.e_fiyat_1 | currency: ' '}} ₺</td>
-                <td class="text-right" *ngIf="siparisListesi[0].e_fiyat_politikasi == '2'">{{urun.e_fiyat_2 | currency: ' '}} ₺</td>
-                <td class="text-right" *ngIf="siparisListesi[0].e_fiyat_politikasi == '3'">{{urun.e_fiyat_3 | currency: ' '}} ₺</td>
+                <td class="text-right">{{urun.e_fiyat | currency: ' '}} ₺</td>
                 <td class="text-left">
                   <button type="button" class="btn btn-block btn-primary w-100" (click)="urunSec(urun)"><span class="fas fa-plus mr-2"></span> Seç</button>
                 </td>
