siparis ekle sayfasi eklendi

--- a/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
+++ b/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
@@ -245,7 +245,7 @@
       </div>
       <div class="form-group col-md-2">
         <label>&nbsp;</label>
-        <button class="btn btn-dark btn-block"><i class="fas fa-sync mr-2"></i> Filtrele</button>
+        <button class="btn btn-dark btn-block" (click)="satisListele()"><i class="fas fa-sync mr-2"></i> Filtrele</button>
       </div>
     </form>
   </div>
