--- a/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
+++ b/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
@@ -74,9 +74,10 @@
                     <table class="table table-bordered table-hover">
                         <thead>
                         <tr class="alert-primary">
-                            <th class="text-center w-15">Ürün Stok Kodu</th>
+                            <th class="text-center w-15">Ürün Resmi</th>
+                            <th class="text-center w-5">Stok Kodu</th>
                             <th class="text-center w-30">Ürün Adı</th>
-                            <th class="text-center w-10">Miktar</th>
+                            <th class="text-center w-5">Miktar</th>
                             <th class="text-center w-20">Satır Toplamı</th>
                             <th class="text-center w-25"></th>
                             <!-- <th class="text-center"><button type="button" class="btn btn-sm btn-primary w-100" (click)="satisDetayEkleButton()"><i class="fas fa-plus mr-1"></i>Detay Ekle</button></th> -->
@@ -84,6 +85,9 @@
                         </thead>
                         <tbody>
                         <tr *ngFor="let detay of satisDetayListesi">
+                            <td class="text-center">
+                              <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{detay.e_resim_uniq_id}}.{{detay.e_resim_dosya_uzantisi}}" width="70px" height="70px">
+                            </td>
                             <td class="text-center">{{detay.e_stok_kart_kodu}}</td>
                             <td class="text-center">{{detay.e_stok_kart_adi}}</td>
                             <td class="text-center">{{detay.e_miktar}}</td>
@@ -93,6 +97,14 @@
                                 <button class="btn btn-sm btn-dark w-48" *ngIf="!silinenKayitBtn[detay.e_id]" (click)="detaySilButton(detay, 'satisIslemleri/satisDetaySil');"><i class="fas fa-times"></i></button>
                                 <button class="btn btn-sm btn-dark w-48" *ngIf="silinenKayitBtn[detay.e_id]"><div class="spinner-glow spinner-glow-light mt-0"></div></button>
                             </td>
+                        </tr>
+                        <tr class="alert-primary">
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td class="text-right">ALT TOPLAM : {{satisDetayListesi[0].ALT_TOPLAM | currency : ' '}} ₺</td>
+                          <td></td>
                         </tr>
                         </tbody>
                     </table>
@@ -195,7 +207,7 @@
       <div class="spinner-glow spinner-glow-primary m-0 mr-4 valign-middle"></div>
       <span class=" valign-middle">Ürün kayıtları listeleniyor, lütfen bekleyiniz.</span>
     </div>
-    <div class="card full-list-1" [hidden]="!urunListesi || urunLoader">
+    <div class="card full-list-1" [hidden]="!urunListesi || urunLoader" style="height: calc(100vh - 354px)">
       <div class="card-body" *ngIf="urunListesi && !urunLoader">
         <div class="table-responsive">
           <table class="table table-bordered table-hover">
